--- a/app/src/main/res/layout/activity_register_system.xml
+++ b/app/src/main/res/layout/activity_register_system.xml
@@ -68,5 +68,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_permanentRegCode" />
 
+    <Button
+        android:id="@+id/trial_correct"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="修改"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/trial_editTextText"
+        app:layout_constraintTop_toBottomOf="@+id/button_funtion" />
+
+    <EditText
+        android:id="@+id/trial_editTextText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        android:ems="10"
+        android:inputType="number"
+        android:hint="输入试用修改次数"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_funtion" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
