--- a/app/src/main/res/menu/log.xml
+++ b/app/src/main/res/menu/log.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!-- 账号相关 -->
     <item
         android:id="@+id/luowang"
-        android:title="罗网账号"/>
+        android:title="罗网账号"
+        android:orderInCategory="1"
+        app:showAsAction="never" />
+
+    <!-- 日志 -->
     <item
         android:id="@+id/log"
-        android:title="日志"/>
+        android:title="日志"
+        android:orderInCategory="2"
+        app:showAsAction="never" />
+
 </menu>
