--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.APPAuto" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- 状态栏颜色 -->
+        <item name="android:statusBarColor">#111827</item>
+        <!-- 让状态栏图标用浅色（白色） -->
+        <item name="android:windowLightStatusBar">false</item>
+
+        <!-- 如果你也想导航栏一起深色，可加 -->
+        <item name="android:navigationBarColor">#111827</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -9,8 +16,30 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <!-- 深色高级风格 DatePicker（兼容旧 Material 版本） -->
+    <style name="ThemeOverlay.APPAuto.MaterialDatePicker"
+        parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
+
+        <!-- 主色/选中态 -->
+        <item name="colorPrimary">#111827</item>
+        <item name="colorOnPrimary">@android:color/white</item>
+
+        <!-- 日历背景/文字颜色（MaterialDatePicker 会读取这些） -->
+        <item name="colorSurface">@android:color/white</item>
+        <item name="colorOnSurface">#111827</item>
+
+        <!-- 次要元素（如年份/提示） -->
+        <item name="colorSecondary">#111827</item>
+        <item name="colorOnSecondary">@android:color/white</item>
+    </style>
+
+    <style name="AppPopupMenuStyle" parent="ThemeOverlay.MaterialComponents.Light">
+        <item name="android:popupBackground">@drawable/bg_popup_round</item>
+        <item name="android:textColor">#111827</item>
+    </style>
+
+
 </resources>
